--- a/index.html
+++ b/index.html
@@ -10,30 +10,32 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="grid-container">
-        <div class="grid-item output"></div>
+        <div class="output">
+            <div class="previous-operand"></div>
+            <div class="current-operand"></div>
+        </div>
         <button class="grid-item clear" id="AC">AC</button>
-        <button class="grid-item delete" id="del">del</button>
-        <button class="grid-item mod" id="%">%</button>  
-        <button class="grid-item divide" id="/">/</button>
-        <button class="grid-item seven" id="7">7</button>
-        <button class="grid-item eight" id="8">8</button>
-        <button class="grid-item nine" id="9">9</button>
-        <button class="grid-item times" id="X">X</button>
-        <button class="grid-item four" id="4">4</button>
-        <button class="grid-item five" id="5">5</button>
-        <button class="grid-item six" id="6">6</button>
-        <button class="grid-item minus" id="-">-</button>
-        <button class="grid-item one" id="1">1</button>
-        <button class="grid-item two" id="2">2</button>
-        <button class="grid-item three" id="3">3</button>
-        <button class="grid-item plus" id="+">+</button>
-        <button class="grid-item zero" id="0">0</button>
-        <button class="grid-item dot" id=".">.</button>
+        <button class="grid-item del" id="del">del</button>
+        <button class="grid-item operator" id="/">/</button>
+        <button class="grid-item number" id="7">7</button>
+        <button class="grid-item number" id="8">8</button>
+        <button class="grid-item number" id="9">9</button>
+        <button class="grid-item operator" id="*">*</button>
+        <button class="grid-item number" id="4">4</button>
+        <button class="grid-item number" id="5">5</button>
+        <button class="grid-item number" id="6">6</button>
+        <button class="grid-item operator" id="-">-</button>
+        <button class="grid-item number" id="1">1</button>
+        <button class="grid-item number" id="2">2</button>
+        <button class="grid-item number" id="3">3</button>
+        <button class="grid-item operator" id="+">+</button>
+        <button class="grid-item number zero" id="0">0</button>
+        <button class="grid-item number" id=".">.</button>
         <button class="grid-item equal" id="=">=</button>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
